--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,4 +18,4 @@ jobs:
       with:
         go-version-file: 'go.mod'
     - name: Test
-      run: go test -v -race ./... -args -username="${{ secrets.SP_USERNAME }}" -password=${{ secrets.SP_PASSWORD }}
+      run: go test -v -race ./... -username="${{ secrets.SP_USERNAME }}" -password=${{ secrets.SP_PASSWORD }}
